--- a/jdocuments-submitter/Cargo.toml
+++ b/jdocuments-submitter/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+slint = { version = "1.12.1" }
+jdocuments-commons = { path = "../jdocuments-commons" }
+serde = { version = "1.0.219" }
+tracing = { version = "0.1.41" }
+tracing-subscriber = { version = "0.3.19" }
+
+[build-dependencies]
+slint-build = { version = "1.12.1" }
