--- a/jdocuments-submitter/Cargo.toml
+++ b/jdocuments-submitter/Cargo.toml
@@ -10,6 +10,8 @@ serde = { version = "1.0.219" }
 tracing = { version = "0.1.41" }
 tracing-subscriber = { version = "0.3.19" }
 clap = { version = "4.5.45", features = ["derive"] }
+cc = { version = "1.2.33" }
 
 [build-dependencies]
 slint-build = { version = "1.12.1" }
+cc = { version = "1.2.33" }
