--- a/jdocuments-wasm-client/Cargo.toml
+++ b/jdocuments-wasm-client/Cargo.toml
@@ -4,5 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-console_error_panic_hook = "0.1.7"
-leptos = { version = "0.8.6", features = ["csr"] }
+slint = { version = "1.12.1" }
+wasm-bindgen = "0.2.100"
+
+[build-dependencies]
+slint-build = { version = "1.12.1" }
+
+[lib]
+crate-type = ["cdylib"]
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+wasm-bindgen = { version = "0.2" }
