--- a/jdocuments-wasm-client/Cargo.toml
+++ b/jdocuments-wasm-client/Cargo.toml
@@ -3,15 +3,15 @@ name = "jdocuments-wasm-client"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
-slint = { version = "1.12.1" }
-wasm-bindgen = "0.2.100"
-
-[build-dependencies]
-slint-build = { version = "1.12.1" }
-
 [lib]
 crate-type = ["cdylib"]
 
-[target.'cfg(target_family = "wasm")'.dependencies]
+[dependencies]
+wasm-bindgen = "0.2.100"
+slint = { version = "1.12.1" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2" }
+
+[build-dependencies]
+slint-build = { version = "1.12.1" }
