--- a/jdocuments-wasm-client/Cargo.toml
+++ b/jdocuments-wasm-client/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.100"
 slint = { version = "1.12.1" }
+log = "0.4.27"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2" }
